qtchooser (52-gae5eeef-1) UNRELEASED; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * New upstream git snapshot.
  * Do not mention qtx-default packages in the long description. We don't want
    people to use them to build packages.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 12 Jan 2015 11:41:32 -0300

qtchooser (47-gd2b7997-2) unstable; urgency=medium

  * Re-enable tests.
  * Update enable-tests.patch to properly find qt5's qmake, as we don't have
    qtchooser available yet ;)
  * Do not suggest qt[4 5]-default anymore. They produce more harm than what
    they solve.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 19 Sep 2014 22:15:28 -0300

qtchooser (47-gd2b7997-1) unstable; urgency=medium

  * New upstream git snapshot.
  * Remove Add-qmlimportscanner-qtpaths.patch, applied upstream.
  * Tests now require Qt5.
    - Refresh enable-tests.patch to use Qt5.
    - Build depend upon qtbase5-dev instead of libqt4-dev, but leave it
      commented so arm64 and ppc64el don't need to bootstrap it.
      I ran the tests and worked flawlessly, they will get re-enabled on
      the next upload.
    - Do not run the tests for this upload.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 26 Aug 2014 11:19:39 -0300

qtchooser (39-g4717841-3) unstable; urgency=medium

  * Add a patch from Daniel Schepler to allow easier bootstraping of qtchooser
    (Closes: #738658).

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 11 Feb 2014 13:52:42 -0300

qtchooser (39-g4717841-2) unstable; urgency=low

  [ Dmitry Shachnev ]
  * Make qtchooser Multi-Arch: foreign.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Backport Add-qmlimportscanner-qtpaths.patch to support qmlimportscanner
    and qtpaths (Closes: #735599).
  * Update Standards-Version to 3.9.5, no changes required.
  * Override dh_auto_test and simply run make check. Somehow dh_auto_test is
    not detecting the check rule.
